--- a/app/index.html
+++ b/app/index.html
@@ -3,9 +3,9 @@
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link href='https://fonts.googleapis.com/css?family=Roboto:400,100,300,500,700' rel='stylesheet' type='text/css'>
-  <title>Clear View Escapes</title>
-  <meta name="keywords" content="Travel planning, travel bundles, travel escapes">
-  <meta name="description" content="Your clarity. One trip away. We create soul restoring journeys that inspire you to be you.">
+  <title>YudhaYuki | Portfolio</title>
+  <meta name="keywords" content="Frontend Developer, Frontend Developer Brussels, Frontend Developer Amsterdam, Frontend Developer Rotterdam">
+  <meta name="description" content="Pleased you with our UI works">
 </head>
 <body>
   <header>
@@ -13,19 +13,19 @@
     <a href="#">Get in Touch</a>
     <nav>
       <ul>
-        <li><a href="#our-beginning">Our Beginning</a></li>
-        <li><a href="#features">Features</a></li>
-        <li><a href="#testimonials">Testimonials</a></li>
+        <li><a href="#about">About</a></li>
+        <li><a href="#projects">Projects</a></li>
+        <li><a href="#contact">Contact</a></li>
       </ul>
     </nav>
   </header>
 
   <div class="large-hero">
     <img src="assets/images/hero--large.jpg">
-    <h1>Your clarity.</h1>
-    <h2>One trip away.</h2>
-    <p>We create soul restoring journeys that inspire you to be you.</p>
-    <p><a href="#">Get Started Today</a></p>
+    <h1>Hi, I'm Yudha</h1>
+    <h2>I'm a junior front-end web developer</h2>
+    <p>Creating responsive UI design is my playground</p>
+    <p><a href="#">Get in touch</a></p>
   </div>
 
   <div id="our-beginning">
