Changing Hero Section Image

--- a/app/index.html
+++ b/app/index.html
@@ -25,29 +25,18 @@
   </header>
 
 
-
   <!-- LARGE HERO -->
   <div class="large-hero">
-    <picture>
-      <!-- 
-        <source srcset="assets/images/hero--YuYu.jpg 1920w, assets/images/hero--large-hi-dpi.jpg  2840w" media="(min-width:1380px)">
-        <source srcset="assets/images/hero--medium.jpg 1380w, assets/images/hero--medium-hi-dpi.jpg 2760w" media="(min-width:990px)">
-        <source srcset="assets/images/hero--small.jpg 990w, assets/images/hero--small-hi-dpi.jpg 1980w" media="(min-width:640px)">
-        <img srcset="assets/images/hero--smaller.jpg 640w, assets/images/hero--smaller-hi-dpi.jpg 1280w" alt="Cover Image" class="large-hero__image"> 
-      -->
-      <img srcset="assets/images/hero--YuYu.jpg" alt="Cover Image" class="large-hero__image"> 
-    </picture>
-   
-
-    <div class="large-hero__text-content">
-      <div class="wrapper">
-          <h1 class="large-hero__title text-animation__title">Hi, I am Yudha</h1>
-          <h2 class="large-hero__subtitle text-animation__subtitle">I am a junior front-end web developer</h2>
-          <p class="large-hero__description">I like to play with UI design</p>
-          <p><a href="#" class="btn btn--large btn--orange btn--large btn-animation btn-animation--large-btn">Get in touch</a></p>
+    <div class="large-hero--overlay">
+      <div class="large-hero__text-content">
+        <div class="wrapper">
+            <h1 class="large-hero__title text-animation__title">Hi, I am Yudha</h1>
+            <h2 class="large-hero__subtitle text-animation__subtitle">I am a junior front-end web developer</h2>
+            <p class="large-hero__description">I like to play with UI design</p>
+            <p><a href="#" class="btn btn--large btn--orange btn--large btn-animation btn-animation--large-btn">Get in touch</a></p>
+        </div>
       </div>
     </div>
-
   </div>
 
 
