--- a/app/index.html
+++ b/app/index.html
@@ -12,16 +12,27 @@
 <body>
 
   <!-- HEADER -->
-  <header>
-    <img src="assets/images/icons/clear-view-escapes.svg">
-    <a class="btn" href="#">Get in touch</a>
-    <nav>
-      <ul>
-        <li><a href="#about">About</a></li>
-        <li><a href="#projects">Projects</a></li>
-        <li><a href="#contact">Contact</a></li>
-      </ul>
-    </nav>
+  <header class="site-header">
+    <div class="wrapper">
+      <div class="site-header__logo">
+          <div class="site-header__logo__graphic icon icon--YY-logo-white">YudhaYuki</div>          
+      </div>
+
+      <div class="site-header__menu-icon"></div>
+
+      <div class="site-header__menu-content">
+        <div class="site-header__btn-container">
+            <a class="btn" href="#">Get in touch</a>            
+        </div>
+        <nav class="primary-nav primary-nav--pull-right">
+          <ul>
+            <li><a href="#about">About</a></li>
+            <li><a href="#projects">Projects</a></li>
+            <li><a href="#contact">Contact</a></li>
+          </ul>
+        </nav>
+      </div>
+    </div>
   </header>
 
 
