Toggle Menu Work

--- a/app/index.html
+++ b/app/index.html
@@ -181,5 +181,7 @@
         <p><span class="site-footer__text">Copyright &copy; 2018 YudhaYuki. All rights reserved.</span><a class="btn btn--orange" href="#">Get in Touch</a></p>
     </div>
   </footer>
+
+  <script src="/temp/scripts/App.js"></script>
 </body>
 </html>
