--- a/app/index.html
+++ b/app/index.html
@@ -28,9 +28,9 @@
         </div>
         <nav class="primary-nav primary-nav--pull-right">
           <ul>
-            <li><a href="#about">About</a></li>
-            <li><a href="#projects">Projects</a></li>
-            <li><a href="#contact">Contact</a></li>
+            <li><a href="#about" id="about-link">About</a></li>
+            <li><a href="#projects" id="projects-link">Projects</a></li>
+            <li><a href="#contact" id="contact-link">Contact</a></li>
           </ul>
         </nav>
       </div>
@@ -55,7 +55,7 @@
 
 
   <!-- ABOUT -->
-  <div id="about" class="page-section">
+  <div id="about" class="page-section" data-matching-link="#about-link">
     <div class="wrapper">
         <h2 class="headline headline--centered headline--light headline--b-margin-small">The first trip we planned <strong> was our own.</strong></h2>
         <h3 class="headline headline--centered headline--orange headline--small headline--narrow headline--light headline--b-margin-large">Ever since, we&rsquo;ve been working to make travel <strong>better for everyone.</strong></h3>
@@ -89,7 +89,7 @@
 
 
   <!-- PROJECTS -->
-  <div id="projects" class="page-section page-section--blue">
+  <div id="projects" class="page-section page-section--blue" data-matching-link="#projects-link">
     <div class="wrapper">
         <h2 class="section-title"><span class="icon icon--star section-title__icon"></span> Our <strong>Features</strong></h2>
       
@@ -132,7 +132,7 @@
 
 
   <!-- CONTACTS -->
-  <div id="contact" class="page-section page-section--no-b-padding-until-large page-section--testimonials">
+  <div id="contact" class="page-section page-section--no-b-padding-until-large page-section--testimonials" data-matching-link="#contact-link">
     <div class="wrapper wrapper--no-padding-until-large">
       <h2 class="section-title section-title--blue"><span class="icon icon--comment section-title__icon"></span> Real <strong> Testimonials </strong></h2>
 
