--- a/app/index.html
+++ b/app/index.html
@@ -131,6 +131,101 @@
 
 
 
+    <!-- PROJECTS -->
+    <div id="projects" class="page-section page-section--blue" data-matching-link="#projects-link">
+      <div class="wrapper">
+          <h2 class="section-title"><span class="icon icon--star section-title__icon"></span> Our <strong>Features</strong></h2>
+        
+          <div class="row row--gutters-large generic-content-container">
+  
+            <div class="row__medium-3">
+              <div class="projects-item">
+                <img src="/assets/images/logo-natours.png" alt="project natours">
+                <div class="projects-inner">
+                  <h3 class="projects-title">Natours</h3>
+                  <p class="projects-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe, officiis?</p>
+                </div>
+              </div>
+            </div>
+
+            <div class="row__medium-3">
+              <div class="projects-item">
+                <img src="/assets/images/logo-natours.png" alt="project natours">
+                <div class="projects-inner">
+                  <h3 class="projects-title">Natours</h3>
+                  <p class="projects-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe, officiis?</p>
+                </div>
+              </div>
+            </div>
+
+            <div class="row__medium-3">
+              <div class="projects-item">
+                <img src="/assets/images/logo-natours.png" alt="project natours">
+                <div class="projects-inner">
+                  <h3 class="projects-title">Natours</h3>
+                  <p class="projects-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe, officiis?</p>
+                </div>
+              </div>
+            </div>
+
+            <div class="row__medium-3">
+              <div class="projects-item">
+                <img src="/assets/images/logo-natours.png" alt="project natours">
+                <div class="projects-inner">
+                  <h3 class="projects-title">Natours</h3>
+                  <p class="projects-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe, officiis?</p>
+                </div>
+              </div>
+            </div>
+
+            <div class="row__medium-3">
+              <div class="projects-item">
+                <img src="/assets/images/logo-natours.png" alt="project natours">
+                <div class="projects-inner">
+                  <h3 class="projects-title">Natours</h3>
+                  <p class="projects-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe, officiis?</p>
+                </div>
+              </div>
+            </div>
+
+            <div class="row__medium-3">
+              <div class="projects-item">
+                <img src="/assets/images/logo-natours.png" alt="project natours">
+                <div class="projects-inner">
+                  <h3 class="projects-title">Natours</h3>
+                  <p class="projects-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe, officiis?</p>
+                </div>
+              </div>
+            </div>
+
+            <div class="row__medium-3">
+              <div class="projects-item">
+                <img src="/assets/images/logo-natours.png" alt="project natours">
+                <div class="projects-inner">
+                  <h3 class="projects-title">Natours</h3>
+                  <p class="projects-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe, officiis?</p>
+                </div>
+              </div>
+            </div>
+
+            <div class="row__medium-3">
+              <div class="projects-item">
+                <img src="/assets/images/logo-natours.png" alt="project natours">
+                <div class="projects-inner">
+                  <h3 class="projects-title">Natours</h3>
+                  <p class="projects-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe, officiis?</p>
+                </div>
+              </div>
+            </div>
+  
+          </div>
+  
+      </div>
+    </div>
+
+
+
+
   <!-- CONTACTS -->
   <div id="contact" class="page-section page-section--no-b-padding-until-large page-section--testimonials" data-matching-link="#contact-link">
     <div class="wrapper wrapper--no-padding-until-large">
