Adding Modal PART I

--- a/app/index.html
+++ b/app/index.html
@@ -279,6 +279,31 @@
     </div>
   </footer>
 
+  <div class="modal">
+      <div class="modal__inner">
+
+        <h2 class="section-title section-title--less-margin section-title--blue"><span class="icon icon--mail section-title__icon"></span> Get in <strong> Touch </strong></h2>
+        <div class="wrapper wrapper--narrow">
+          <div class="modal__description">
+              <p>I can be contacted via:</p>
+              <p>Yudha.Yuki@hotmail.com</p>
+              <p>(+32) 0477458446</p>
+          </div>
+    
+          <div class="social-icons">
+            <a href="#" class="social-icons__icon"><span class="icon icon--facebook"></span></a>
+            <a href="#" class="social-icons__icon"><span class="icon icon--twitter"></span></a>    
+            <a href="#" class="social-icons__icon"><span class="icon icon--instagram"></span></a>
+            <a href="#" class="social-icons__icon"><span class="icon icon--youtube"></span></a>
+          </div>
+        </div>
+          
+      </div>
+
+    <div class="modal__close">X</div>
+
+  </div>
+
   <script src="/temp/scripts/App.js"></script>
 </body>
 </html>
