--- a/app/index.html
+++ b/app/index.html
@@ -24,7 +24,7 @@
 
       <div class="site-header__menu-content">
         <div class="site-header__btn-container">
-            <a class="btn" href="#">Get in touch</a>            
+            <a class="btn open-modal" href="#">Get in touch</a>            
         </div>
         <nav class="primary-nav primary-nav--pull-right">
           <ul>
@@ -46,7 +46,7 @@
             <h1 class="large-hero__title text-animation__title">Hi, I am Yudha</h1>
             <h2 class="large-hero__subtitle text-animation__subtitle">I am a junior front-end web developer</h2>
             <p class="large-hero__description">I like to play with UI design</p>
-            <p><a href="#" class="btn btn--large btn--orange btn--large btn-animation btn-animation--large-btn">Get in touch</a></p>
+            <p><a href="#" class="btn btn--large btn--orange btn--large btn-animation btn-animation--large-btn open-modal">Get in touch</a></p>
         </div>
       </div>
     </div>
@@ -275,7 +275,7 @@
 
   <footer class="site-footer">
     <div class="wrapper">
-        <p><span class="site-footer__text">Copyright &copy; 2018 YudhaYuki. All rights reserved.</span><a class="btn btn--orange" href="#">Get in Touch</a></p>
+        <p><span class="site-footer__text">Copyright &copy; 2018 YudhaYuki. All rights reserved.</span><a class="btn btn--orange open-modal" href="#">Get in Touch</a></p>
     </div>
   </footer>
 
