Implement usemin in our index.html file

--- a/app/index.html
+++ b/app/index.html
@@ -7,12 +7,18 @@
   <meta name="keywords" content="Frontend Developer, Frontend Developer Brussels, Frontend Developer Amsterdam, Frontend Developer Rotterdam">
   <meta name="description" content="Pleased you with our UI works">
 
+  <!-- build:css /assets/styles/styles.css -->
   <link rel="stylesheet" href="temp/styles/styles.css">
+  <!-- endbuild -->
+
+  <!-- build:js /assets/scripts/Vendor.js -->
   <script src="/temp/scripts/Vendor.js"></script>
+  <!-- endbuild -->
+
 </head>
 <body>
 
-  <!-- HEADER -->
+
   <header class="site-header">
     <div class="wrapper">
       <div class="site-header__logo">
@@ -39,7 +45,7 @@
   </header>
 
 
-  <!-- LARGE HERO -->
+
   <div class="large-hero">
     <div class="large-hero--overlay">
       <div class="large-hero__text-content">
@@ -55,7 +61,7 @@
 
 
 
-  <!-- ABOUT -->
+
   <div id="about" class="page-section" data-matching-link="#about-link">
     <div class="wrapper">
         <h2 class="headline headline--centered headline--light headline--b-margin-small">The first trip we planned <strong> was our own.</strong></h2>
@@ -89,7 +95,7 @@
 
 
 
-  <!-- PROJECTS -->
+
   <div id="projects" class="page-section page-section--blue" data-matching-link="#projects-link">
     <div class="wrapper">
         <h2 class="section-title"><span class="icon icon--star section-title__icon"></span> Our <strong>Features</strong></h2>
@@ -132,8 +138,8 @@
 
 
 
-    <!-- PROJECTS -->
-    <div id="projects" class="page-section page-section--blue" data-matching-link="#projects-link">
+
+  <div id="projects" class="page-section page-section--blue" data-matching-link="#projects-link">
       <div class="wrapper">
           <h2 class="section-title"><span class="icon icon--star section-title__icon"></span> Our <strong>Features</strong></h2>
         
@@ -227,8 +233,8 @@
 
 
 
-  <!-- CONTACTS -->
-  <div id="contact" class="page-section page-section--no-b-padding-until-large page-section--testimonials lazyload" data-matching-link="#contact-link">
+
+    <div id="contact" class="page-section page-section--no-b-padding-until-large page-section--testimonials lazyload" data-matching-link="#contact-link">
     <div class="wrapper wrapper--no-padding-until-large">
       <h2 class="section-title section-title--blue"><span class="icon icon--comment section-title__icon"></span> Real <strong> Testimonials </strong></h2>
 
@@ -274,11 +280,17 @@
     </div>
   </div>
 
+
+
+
   <footer class="site-footer">
     <div class="wrapper">
         <p><span class="site-footer__text">Copyright &copy; 2018 YudhaYuki. All rights reserved.</span><a class="btn btn--orange open-modal" href="#">Get in Touch</a></p>
     </div>
   </footer>
+
+
+
 
   <div class="modal">
       <div class="modal__inner">
@@ -305,6 +317,9 @@
 
   </div>
 
+
+  <!-- build:js /assets/scripts/App.js -->
   <script src="/temp/scripts/App.js"></script>
+  <!-- endbuild -->
 </body>
 </html>
