--- a/app/index.html
+++ b/app/index.html
@@ -7,11 +7,11 @@
   <meta name="keywords" content="Frontend Developer, Frontend Developer Brussels, Frontend Developer Amsterdam, Frontend Developer Rotterdam">
   <meta name="description" content="Pleased you with our UI works">
 
-  <!-- build:css /assets/styles/styles.css -->
+  <!-- build:css assets/styles/styles.css -->
   <link rel="stylesheet" href="temp/styles/styles.css">
   <!-- endbuild -->
 
-  <!-- build:js /assets/scripts/Vendor.js -->
+  <!-- build:js assets/scripts/Vendor.js -->
   <script src="/temp/scripts/Vendor.js"></script>
   <!-- endbuild -->
 
@@ -318,7 +318,7 @@
   </div>
 
 
-  <!-- build:js /assets/scripts/App.js -->
+  <!-- build:js assets/scripts/App.js -->
   <script src="/temp/scripts/App.js"></script>
   <!-- endbuild -->
 </body>
