--- a/app/index.html
+++ b/app/index.html
@@ -128,134 +128,136 @@
   </div>
 
 
-<!--
-
-  <div id="projects" class="page-section page-section--blue" data-matching-link="#projects-link">
-    <div class="wrapper">
-        <h2 class="section-title"><span class="icon icon--star section-title__icon"></span> Our <strong>Features</strong></h2>
-      
-        <div class="row row--gutters-large generic-content-container">
-
-          <div class="row__medium-6">
-            <div class="feature-item">
-                <span class="icon icon--rain feature-item__icon"></span>
-                <h3 class="feature-item__title">We&rsquo;ll Watch the Weather</h3>
-                <p>Download our app and we&rsquo;ll send you a notice if it&rsquo;s about to rain in the next 20 minutes around your current location. A good rain can be refreshing, but sometimes you just want to stay dry.</p>
-            </div>
-
-            <div class="feature-item">
-                <span class="icon icon--globe feature-item__icon"></span>
-                <h3 class="feature-item__title">Global Guides</h3>
-                <p>We&rsquo;ve scoured the entire planet for the best retreats and beautiful vistas. If there&rsquo;s a corner of the world you want to escape to we know the most scenic and inspiring locations.</p>
-            </div>
-          </div>
-
-          <div class="row__medium-6">
-            <div class="feature-item">
-                <span class="icon icon--wifi feature-item__icon"></span>
-                <h3 class="feature-item__title">Wi-Fi Waypoints</h3>
-                <p>We only send you on trips to places we can personally vouch for as being amazing. Which means we&rsquo;ve mapped out where local wi-fi spots are and marked them in our app&rsquo;s map view.</p>
-            </div>
-
-            <div class="feature-item">
-                <span class="icon icon--fire feature-item__icon"></span>
-                <h3 class="feature-item__title">Survival Kit</h3>
-                <p>Everytime you book an escape with us we send you a survival kit with the finest materials. The kit will allow you to setup a tent, start a fire, scratch your own back and lower your taxes.</p>
-            </div>
-          </div>
-
-        </div>
-
-    </div>
-  </div>
-
--->
-
-
-
-
-  <div id="projects" class="page-section page-section--blue" data-matching-link="#projects-link">
+  <div id="projects" class="page-section page-section--blue lazyload" data-matching-link="#projects-link">
       <div class="wrapper">
           <h2 class="section-title"></span>Some<strong> Projects</strong></h2>
         
           <div class="row row--gutters-small generic-content-container">
   
-            <div class="row__medium-4">
+            <div class="row__medium-3">
               <div class="projects-item">
-                <img src="/assets/images/logo-natours.png" alt="project natours">
+                <img class="lazyload" data-srcset="/assets/images/logo-natours.png" alt="project natours">
                 <div class="projects-inner">
                   <h3 class="projects-title">Natours</h3>
-                  <p class="projects-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe, officiis?</p>
+                  <p class="projects-description">A project using advanced CSS and SASS</p>
+                  <div>
+                    <a href="https://github.com/YudhaYuki/yuyu-tour-and-travel" class="btn btn-animation btn--behind-card-1">Look source</a>
+                  </div>
+                  <div>
+                    <a href="http://yuyutours.surge.sh/" class="btn btn-animation btn--behind-card-2">Visit Site</a> 
+                  </div>
                 </div>
               </div>
             </div>
 
-            <div class="row__medium-4">
+            <div class="row__medium-3">
               <div class="projects-item">
-                <img src="/assets/images/logo-warna-holiday.png" alt="project warna holiday">
+                <img class="lazyload" data-srcset="/assets/images/logo-warna-holiday.png" alt="project warna holiday">
                 <div class="projects-inner">
-                  <h3 class="projects-title">Natours</h3>
-                  <p class="projects-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe, officiis?</p>
+                  <h3 class="projects-title">Warna Holiday</h3>
+                  <p class="projects-description">A project with advanced CSS Flexbox and SASS</p>
+                  <div>
+                    <a href="https://github.com/YudhaYuki/warna-holiday" class="btn btn-animation btn--behind-card-1">Look source</a>
+                  </div>
+                  <div>
+                      <a href="http://warna.surge.sh/" class="btn btn-animation btn--behind-card-2">Visit Site</a> 
+                  </div>
                 </div>
               </div>
             </div>
 
-            <div class="row__medium-4">
+            <div class="row__medium-3">
               <div class="projects-item">
-                <img src="/assets/images/logo-bigdayout.png" alt="project Big Day Out">
+                <img class="lazyload" data-srcset="/assets/images/logo-bigdayout.png" alt="project Big Day Out">
                 <div class="projects-inner">
-                  <h3 class="projects-title">Natours</h3>
-                  <p class="projects-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe, officiis?</p>
+                  <h3 class="projects-title">Big Day Out</h3>
+                  <p class="projects-description">A project using PHP, Laravel, JavaScript, CSS3 and Bootstrap</p>
+                  <div>
+                    <a href="https://github.com/YudhaYuki/final_project" class="btn btn-animation btn--behind-card-1">Look source</a>
+                  </div>
+                  <div>
+                      <a href="http://bigdayout.data4you.cz/" class="btn btn-animation btn--behind-card-2">Visit Site</a> 
+                  </div>
                 </div>
               </div>
             </div>
 
-            <div class="row__medium-4">
+            <div class="row__medium-3">
               <div class="projects-item">
-                <img src="/assets/images/logo-multi-page-theme.png" alt="project multi page themes">
+                <img class="lazyload" data-srcset="/assets/images/logo-multi-page-theme.png" alt="project multi page themes">
                 <div class="projects-inner">
-                  <h3 class="projects-title">Natours</h3>
-                  <p class="projects-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe, officiis?</p>
+                  <h3 class="projects-title">Glozzom</h3>
+                  <p class="projects-description">A multi-page themes with bootstrap</p>
+                  <div>
+                    <a href="https://github.com/YudhaYuki/multi-page-theme" class="btn btn-animation btn--behind-card-1">Look source</a>
+                  </div>
+                  <div>
+                      <a href="waiting-title.surge.sh" class="btn btn-animation btn--behind-card-2">Visit Site</a> 
+                  </div>
                 </div>
               </div>
             </div>
 
-            <div class="row__medium-4">
+            <div class="row__medium-3">
               <div class="projects-item">
-                <img src="/assets/images/logo_budgety.png" alt="Project Budget">
+                <img class="lazyload" data-srcset="/assets/images/logo_budgety.png" alt="Project Budget">
                 <div class="projects-inner">
-                  <h3 class="projects-title">Natours</h3>
-                  <p class="projects-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe, officiis?</p>
+                  <h3 class="projects-title">Budgety</h3>
+                  <p class="projects-description">A budget app with JavaScript</p>
+                  <div>
+                    <a href="https://github.com/YudhaYuki/budget-app" class="btn btn-animation btn--behind-card-1">Look source</a>
+                  </div>
+                  <div>
+                      <a href="http://budgety.surge.sh/" class="btn btn-animation btn--behind-card-2">Visit Site</a> 
+                  </div>
                 </div>
               </div>
             </div>
 
-            <div class="row__medium-4">
+            <div class="row__medium-3">
               <div class="projects-item">
-                <img src="/assets/images/logo-mizuxe.png" alt="project mizuxe">
+                <img class="lazyload" data-srcset="/assets/images/logo-mizuxe.png" alt="project mizuxe">
                 <div class="projects-inner">
-                  <h3 class="projects-title">Natours</h3>
-                  <p class="projects-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe, officiis?</p>
+                  <h3 class="projects-title">Mizuxe</h3>
+                  <p class="projects-description">A one-page theme with bootstrap and jQuery Plugin</p>
+                  <div>
+                    <a href="https://github.com/YudhaYuki/mizuxe" class="btn btn-animation btn--behind-card-1">Look source</a>
+                  </div>
+                  <div>
+                      <a href="mizuxe-bootstrapt.surge.sh" class="btn btn-animation btn--behind-card-2">Visit Site</a> 
+                  </div>
                 </div>
               </div>
             </div>
 
-            <div class="row__medium-4">
+            <div class="row__medium-3">
               <div class="projects-item">
-                <img src="/assets/images/logo-nexter.png" alt="project nexter property">
+                <img class="lazyload" data-srcset="/assets/images/logo-nexter.png" alt="project nexter property">
                 <div class="projects-inner">
-                  <h3 class="projects-title">Natours</h3>
-                  <p class="projects-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe, officiis?</p>
+                  <h3 class="projects-title">Nexter</h3>
+                  <p class="projects-description">A project with CSS Grids and SASS</p>
+                  <div>
+                    <a href="https://github.com/YudhaYuki/warna-property" class="btn btn-animation btn--behind-card-1">Look source</a>
+                  </div>
+                  <div>
+                      <a href="http://warna-property.surge.sh/" class="btn btn-animation btn--behind-card-2">Visit Site</a> 
+                  </div>
                 </div>
               </div>
             </div>
 
-            <div class="row__medium-4">
+            <div class="row__medium-3">
               <div class="projects-item">
-                <img src="/assets/images/logo-portfolio.png" alt="project potofolio">
+                <img class="lazyload" data-srcset="/assets/images/logo-portfolio.png" alt="project potofolio">
                 <div class="projects-inner">
-                  <h3 class="projects-title">Natours</h3>
-                  <p class="projects-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe, officiis?</p>
+                  <h3 class="projects-title">Portfolio</h3>
+                  <p class="projects-description">A portfolio with bootstrap grids</p>
+                  <div>
+                    <a href="https://github.com/YudhaYuki/my-portfolio" class="btn btn-animation btn--behind-card-1">Look source</a>
+                  </div>
+                  <div>
+                      <a href="portfolio-yy.surge.sh" class="btn btn-animation btn--behind-card-2">Visit Site</a> 
+                  </div>
                 </div>
               </div>
             </div>
@@ -269,7 +271,7 @@
 
 
 
-    <div id="contact" class="page-section page-section--no-b-padding-until-large page-section--testimonials lazyload" data-matching-link="#contact-link">
+    <div id="contact" class="page-section page-section--no-b-padding-until-large page-section--testimonials" data-matching-link="#contact-link">
     <div class="wrapper wrapper--no-padding-until-large">
       <h2 class="section-title section-title--blue"><span class="icon icon--comment section-title__icon"></span> Real <strong> Testimonials </strong></h2>
 
