Modify Projec Items

--- a/app/index.html
+++ b/app/index.html
@@ -194,7 +194,7 @@
                     <a href="https://github.com/YudhaYuki/multi-page-theme" class="btn btn-animation btn--behind-card-1">Look source</a>
                   </div>
                   <div>
-                      <a href="waiting-title.surge.sh" class="btn btn-animation btn--behind-card-2">Visit Site</a> 
+                      <a href="glozzom-multi-page.surge.sh" class="btn btn-animation btn--behind-card-2">Visit Site</a> 
                   </div>
                 </div>
               </div>
